--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,103 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
-
-# database
-/prisma/db.sqlite
-/prisma/db.sqlite-journal
-db.sqlite
+coverage
+.nyc_output
 
 # next.js
-/.next/
-/out/
-next-env.d.ts
-
-# production
-/build
+.next/
+out/
+build
+dist
+.swc/
 
 # misc
 .DS_Store
 *.pem
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.docker
+.env.example
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
 # do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
-.env
 .env*.local
+
+# cursor
+.cursor
+.cursor/
+.cursor/rules/
+.cursor/settings.json
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+next-env.d.ts
 
-# idea files
-.idea
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+.vs/
+*.sublime-workspace
+*.sublime-project
+
+# database
+*.sqlite
+*.sqlite3
+/scripts/mock-data.sql
+/scripts/mock-data.dump
+/drizzle/
+
+# logs
+logs
+*.log
+.log/
+
+# cache
+.cache/
+.next/cache/
+
+# docker
+docker-compose.override.yml
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# dotenv environment variable files
+.env*
+!.env.example
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
