--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "@types/nodemailer": "^6.4.17",
-    "@types/pdfkit": "^0.13.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "drizzle-orm": "^0.41.0",
+    "fontkit": "^2.0.4",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "nodemailer": "^6.10.1",
-    "pdfkit": "^0.17.0",
+    "pdfkit-table": "^0.1.99",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
