second table applied

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "drizzle-orm": "^0.41.0",
     "fontkit": "^2.0.4",
@@ -54,6 +55,7 @@
     "pdfkit-table": "^0.1.99",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.2",
